--- a/retailer.html
+++ b/retailer.html
@@ -572,7 +572,7 @@ const API = "https://shopbacked-vmhs.onrender.com";
 let selectedProduct = null;
 let cart = [];
 let cartDeliveryCharge = 0;
-let cartTimer = null;
+
 // DOM elements
 const dImages = document.getElementById("dImages");
 const dDots   = document.getElementById("dDots");
@@ -1096,52 +1096,86 @@ async function updateDelivery() {
   }
 }
 
-  async function calcCartDelivery(){
+  let cartTimer = null;
+
+async function calcCartDelivery(){
 
   const vehicle = document.getElementById("cartVehicle").value;
-  const box = document.getElementById("cartDeliveryBox");
-  const deliveryText = document.getElementById("cartDeliveryText");
-  const totalText = document.getElementById("cartTotalText");
+  const deliveryBox = document.getElementById("cartDeliveryBox");
+  const cartSubtotalEl = document.getElementById("cartSubtotal");
+  const cartDeliveryEl = document.getElementById("cartDelivery");
+  const cartGrandTotalEl = document.getElementById("cartGrandTotal");
 
-  if(!vehicle){
-    box.style.display = "none";
-    cartDeliveryCharge = 0;
+  if (!vehicle || cart.length === 0) {
+    deliveryBox.style.display = "none";
     return;
   }
 
-  const cart = JSON.parse(localStorage.getItem("cart") || "[]");
-  if(!cart.length){
-    box.style.display = "none";
-    return;
-  }
+  // 🧮 subtotal
+  const subtotal = cart.reduce((sum, item) => sum + Number(item.price), 0);
 
-  const subtotal = cart.reduce((sum,i)=> sum + Number(i.price||0), 0);
+  /* ================= RETAILER LOCATION ================= */
+  const retailerProfile =
+    JSON.parse(localStorage.getItem("retailerProfile") || "{}");
 
   let retailerLoc =
     JSON.parse(localStorage.getItem("retailer_location")) ||
-    JSON.parse(localStorage.getItem("retailerProfile")||"{}").location ||
+    retailerProfile.location ||
     null;
 
-  if(retailerLoc?.latitude){
-    retailerLoc = { lat: retailerLoc.latitude, lng: retailerLoc.longitude };
+  if (retailerLoc?.latitude && retailerLoc?.longitude) {
+    retailerLoc = {
+      lat: retailerLoc.latitude,
+      lng: retailerLoc.longitude
+    };
   }
 
-  let wholesalerLoc = cart[0]?.wholesalerLocation;
-  if(wholesalerLoc?.latitude){
-    wholesalerLoc = { lat: wholesalerLoc.latitude, lng: wholesalerLoc.longitude };
+  /* ================= WHOLESALER LOCATION ================= */
+  // ⚠️ CART में मान लेते हैं सब items same wholesaler के हैं
+  const firstItem = cart[0];
+  let wholesalerLoc = null;
+
+  try {
+    const resWh = await fetch(
+      `${API}/api/wholesalers/profile/${firstItem.wholesalerId}`
+    );
+    const whData = await resWh.json();
+
+    wholesalerLoc =
+      whData?.profile?.location ||
+      whData?.wholesaler?.location ||
+      whData?.location ||
+      null;
+
+    if (wholesalerLoc?.latitude && wholesalerLoc?.longitude) {
+      wholesalerLoc = {
+        lat: wholesalerLoc.latitude,
+        lng: wholesalerLoc.longitude
+      };
+    }
+
+  } catch (err) {
+    console.error("Wholesaler location error", err);
   }
 
-  if(!retailerLoc || !wholesalerLoc){
-    box.style.display = "block";
-    deliveryText.innerText = "📍 Location missing";
-    totalText.innerText = "";
+  /* ================= VALIDATION ================= */
+  if (
+    !retailerLoc?.lat ||
+    !retailerLoc?.lng ||
+    !wholesalerLoc?.lat ||
+    !wholesalerLoc?.lng
+  ) {
+    deliveryBox.style.display = "block";
+    cartDeliveryEl.innerText = "📍 Location missing";
+    cartGrandTotalEl.innerText = "";
     return;
   }
 
-  try{
-    const res = await fetch(`${API}/api/delivery/calculate`,{
-      method:"POST",
-      headers:{ "Content-Type":"application/json" },
+  /* ================= API CALL ================= */
+  try {
+    const res = await fetch(`${API}/api/delivery/calculate`, {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
       body: JSON.stringify({
         orderAmount: subtotal,
         vehicleType: vehicle,
@@ -1151,23 +1185,33 @@ async function updateDelivery() {
     });
 
     const data = await res.json();
-    if(!data.success) throw "fail";
 
-    cartDeliveryCharge = Number(data.retailerPays);
+    if (!data.success) {
+      deliveryBox.style.display = "block";
+      cartDeliveryEl.innerText = "❌ Delivery failed";
+      return;
+    }
 
-    box.style.display = "block";
-    deliveryText.innerText =
-      `🚚 Delivery ₹${cartDeliveryCharge} (${data.retailerPercent}%)`;
+    /* ================= UI UPDATE ================= */
+    deliveryBox.style.display = "block";
 
-    totalText.innerText =
-      `💰 Total ₹${subtotal + cartDeliveryCharge}`;
+    cartSubtotalEl.innerText = `Subtotal ₹${subtotal}`;
+    cartDeliveryEl.innerText = `Delivery ₹${data.retailerPays}`;
+    cartGrandTotalEl.innerText =
+      `Total ₹${subtotal + Number(data.retailerPays)}`;
 
-  }catch(e){
-    box.style.display = "block";
-    deliveryText.innerText = "⚠️ Delivery error";
-    totalText.innerText = "";
+    // 💾 payment ke liye store
+    window.__cartDelivery = {
+      subtotal,
+      delivery: data.retailerPays,
+      total: subtotal + Number(data.retailerPays),
+      vehicleType: vehicle
+    };
+
+  } catch (err) {
+    console.error("Cart delivery error", err);
   }
-  }
+}
   // ------------------- CART -------------------
 async function addToCart(p){
 
