--- a/retailer.html
+++ b/retailer.html
@@ -1119,9 +1119,9 @@ async function calcCartDelivery(){
 
   /* ================= SUBTOTAL ================= */
   const subtotal = cart.reduce(
-    (sum, item) => sum + Number(item.price),
-    0
-  );
+  (sum, item) => sum + (Number(item.price) * Number(item.quantity || 1)),
+  0
+);
 
   /* ================= RETAILER LOCATION ================= */
   let retailerLoc =
