--- a/retailer.html
+++ b/retailer.html
@@ -1266,22 +1266,19 @@ async function addToCart(p){
     // ❌ DIFFERENT WHOLESALER FOUND
     if(!data.success && data.message && data.message.includes("Only one wholesaler")){
 
-      // 🧹 AUTO CLEAR CART (BACKEND)
-      await fetch(`${API}/api/cart/clear/${retailerId}`,{
-        method:"DELETE"
-      });
+      // Backend cart clear
+await fetch(`${API}/api/cart/clear/${retailerId}`, { method: "DELETE" });
 
-      // 🧹 CLEAR FRONTEND
-      cart = [];
-      localStorage.removeItem("cart");
-      currentWholesalerId = null;
+// Frontend cart clear
+cart = [];
+localStorage.removeItem("cart");
+currentWholesalerId = null;
 
-      alert("🧹 Purana cart clear kar diya gaya. Ab naya wholesaler add ho raha hai.");
+alert("🧹 पुराना cart clear कर दिया गया। अब नया product add हो रहा है।");
 
-      // 🔁 TRY AGAIN (ADD NEW PRODUCT)
-      addToCart(p);
-      return;
-    }
+// नया product फिर से add करो
+addToCart(p);
+return;
 
     if(data.success){
       cart.push(p);
