--- a/retailer.html
+++ b/retailer.html
@@ -1264,21 +1264,21 @@ async function addToCart(p){
     const data = await res.json();
 
     // ❌ DIFFERENT WHOLESALER FOUND
-    if(!data.success && data.message && data.message.includes("Only one wholesaler")){
+    if (!data.success && data.message && data.message.includes("Only one wholesaler")) {
+      // 🔹 Backend cart clear
+      await fetch(`${API}/api/cart/clear/${retailerId}`, { method: "DELETE" });
 
-      // Backend cart clear
-await fetch(`${API}/api/cart/clear/${retailerId}`, { method: "DELETE" });
+      // 🔹 Frontend cart clear
+      cart = [];
+      localStorage.removeItem("cart");
+      currentWholesalerId = null;
 
-// Frontend cart clear
-cart = [];
-localStorage.removeItem("cart");
-currentWholesalerId = null;
+      alert("🧹 पुराना cart clear कर दिया गया। अब नया product add हो रहा है।");
 
-alert("🧹 पुराना cart clear कर दिया गया। अब नया product add हो रहा है।");
-
-// नया product फिर से add करो
-addToCart(p);
-return;
+      // 🔹 नया product फिर से add करो
+      addToCart(p);
+      return;
+    }
 
     if(data.success){
       cart.push(p);
