--- a/categoryProducts.html
+++ b/categoryProducts.html
@@ -310,8 +310,8 @@ function closeAll(){
   lastDeliveryCharge = 0;
 }
 function goBack(){
-  sessionStorage.setItem("fromCategory", "1");
-  window.location.href = "retailer.html";
+  sessionStorage.setItem("fromCategory", "yes");
+  history.back();   // 🔥 VERY IMPORTANT
 }
 // ---------------- CART ----------------
 // ---------------- CART ----------------
