--- a/categoryProducts.html
+++ b/categoryProducts.html
@@ -310,8 +310,7 @@ function closeAll(){
   lastDeliveryCharge = 0;
 }
 function goBack(){
-  sessionStorage.setItem("fromCategory", "yes");
-  history.back();   // 🔥 VERY IMPORTANT
+  history.back();
 }
 // ---------------- CART ----------------
 // ---------------- CART ----------------
